# backend-performance-rust

./: .env  Cargo.toml  docker-compose.yml  initdb.sql
src/: main.rs
src/sql/: busca_pessoas.sql  create_pessoa.sql
