[package]
name = "backend-performance-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
hyper = { version = "0.14.27", features = ["full"] }
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-rustls", "postgres", "time", "uuid", "json", "chrono", "bigdecimal"] }
bigdecimal = "0.4.1"
